created grid of 16 / 16 squares

--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
-h1 {
-    background-color: red;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+.container div {
+    display: flex;
+    flex-grow: 1;
+}
+
+div {
+    border: 1px solid black;
 }
